# AdvancedOOPAlgos

./: .gitignore  Animal.cpp  Animal.hpp  BrainChild.cpp  BrainChild.hpp  CMakeLists.txt  Child.cpp  Child.hpp  Hats.hpp  Lines.cpp  Lines.hpp  Parameters.hpp  Parent.cpp  Parent.hpp  build_run_advanced.bat  build_run_advanced_nmake.bat  main.cpp
